@@ -46,6 +46,7 @@ Readonly::Scalar our $ADAPTERS_DIR       => q[adapters];
 Readonly::Scalar our $GENOTYPES_DIR      => q[genotypes];
 Readonly::Scalar our $BAITS_DIR          => q[baits];
 Readonly::Scalar our $GBS_PLEX_DIR       => q[gbs_plex];
+Readonly::Scalar our $GENO_REFSET_DIR    => q[geno_refset];
 Readonly::Scalar our $TAG_SETS_DIR       => q[tag_sets];
 Readonly::Scalar our $TAXON_IDS_DIR      => q[taxon_ids];
 Readonly::Scalar our $BIN_DIR            => q[bin];
@@ -158,6 +159,20 @@ has 'gbs_plex_repository' => (isa        => 'NPG_TRACKING_REFERENCE_REPOSITORY',
 sub _build_gbs_plex_repository {
     my $self = shift;
     return catdir($self->repository, $GBS_PLEX_DIR);
+}
+
+
+=head2 geno_refset_repository
+
+=cut
+has 'geno_refset_repository' => (isa        => 'NPG_TRACKING_REFERENCE_REPOSITORY',
+                                 is         => 'ro',
+                                 required   => 0,
+                                 lazy_build => 1,
+);
+sub _build_geno_refset_repository {
+    my $self = shift;
+    return catdir($self->repository, $GENO_REFSET_DIR);
 }
 
 =head2 tag_sets_repository
