@@ -1,5 +1,7 @@
 LIST OF CHANGES
 
+ - changes to support geno_refset repository 
+
 release 87.2
  - added method to find file with MT genes inside transcriptome repository
  - change attributes in transcriptome-find to use lazy and builder rather than
